re PR c/18502 (trigraphs don't work with -std=gnu99)

PR c/18502
	* gcc.c (cpp_unique_options): Remove %{trigraphs}.
	(cpp_options, cc1_options): Change %{std*&ansi} to
	%{std*&ansi&trigraphs}.

testsuite:
	* gcc.dg/pr18502-1.c: New test.

From-SVN: r94632